cart-account-report

--- a/page-view.html
+++ b/page-view.html
@@ -8,12 +8,30 @@
 </head>
 
 <body>
+    <div class="safe">
+        <a href="#"></a>
+    </div>
     <div class="banner">
-
         <div class="report-cart-account">
-            <a href="#" class="report">thong bao</a>
-            <a href="#" class="cart">Dang Ki</a>
-            <a href="#" class="account">Tai Khoan</a>
+            <form class="sreach">
+                <label>
+                    Tim kiem
+                </label>
+                <input type="text" placeholder="nhap khong tin muon tim">
+                <input type="submit" value="submit" style="cursor: pointer;">
+            </form>
+            <div class="left">
+                <img src="./picture/icon/ico_account_gray.svg" />
+                <span>thong bao</span>
+            </div>
+            <div class="center">
+                <img src="./picture/icon/ico_cart_gray.svg" />
+                <span>gio hang</span>
+            </div>
+            <div class="right">
+                <img src="./picture/icon/ico_account_gray.svg" />
+                <span>tai khoan</span>
+            </div>
         </div>
         <div class="logo"></div>
         <div class="content-center"></div>
